updated html to include css and js, added d3 tag to include d3 library

--- a/d3Hw6.html
+++ b/d3Hw6.html
@@ -1,6 +1,30 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<script src="d3HW6.js"></script>
+	<!-- WE CAN PUT THE CSS HERE -->
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	<script src="http://d3js.org/d3.v3.min.js"></script>
+	<script>
+		<!-- WE CAN PUT ALL THE JAVASCRIPT DOWN HERE-->
+	</script>
 </body>
 </html>
