--- a/d3Hw6.html
+++ b/d3Hw6.html
@@ -75,16 +75,16 @@
 	  .append("g")
 	    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-	d3.csv("data.csv", function(error, data) {
-	  var ageNames = d3.keys(data[0]).filter(function(key) { return key !== "State"; });
+	d3.csv("US_medals.csv", function(error, data) {
+	  var medals = d3.keys(data[0]).filter(function(key) { return key !== "Games"; });
 
 	  data.forEach(function(d) {
-	    d.ages = ageNames.map(function(name) { return {name: name, value: +d[name]}; });
+	    d.medalsWon = medals.map(function(name) { return {name: name, value: +d[name]}; });
 	  });
 
-	  x0.domain(data.map(function(d) { return d.State; }));
-	  x1.domain(ageNames).rangeRoundBands([0, x0.rangeBand()]);
-	  y.domain([0, d3.max(data, function(d) { return d3.max(d.ages, function(d) { return d.value; }); })]);
+	  x0.domain(data.map(function(d) { return d.Games; }));
+	  x1.domain(medals).rangeRoundBands([0, x0.rangeBand()]);
+	  y.domain([0, d3.max(data, function(d) { return d3.max(d.medalsWon, function(d) { return d.value; }); })]);
 
 	  svg.append("g")
 	      .attr("class", "x axis")
@@ -105,10 +105,10 @@
 	      .data(data)
 	    .enter().append("g")
 	      .attr("class", "g")
-	      .attr("transform", function(d) { return "translate(" + x0(d.State) + ",0)"; });
+	      .attr("transform", function(d) { return "translate(" + x0(d.Games) + ",0)"; });
 
 	  state.selectAll("rect")
-	      .data(function(d) { return d.ages; })
+	      .data(function(d) { return d.medalsWon; })
 	    .enter().append("rect")
 	      .attr("width", x1.rangeBand())
 	      .attr("x", function(d) { return x1(d.name); })
@@ -117,7 +117,7 @@
 	      .style("fill", function(d) { return color(d.name); });
 
 	  var legend = svg.selectAll(".legend")
-	      .data(ageNames.slice().reverse())
+	      .data(medals.slice().reverse())
 	    .enter().append("g")
 	      .attr("class", "legend")
 	      .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
