changed y axis. Still need to remove the Comments and Country

--- a/d3Hw6.html
+++ b/d3Hw6.html
@@ -99,7 +99,7 @@
 	      .attr("y", 6)
 	      .attr("dy", ".71em")
 	      .style("text-anchor", "end")
-	      .text("Population");
+	      .text("Number of Medals");
 
 	  var state = svg.selectAll(".state")
 	      .data(data)
