--- a/d3Hw6.html
+++ b/d3Hw6.html
@@ -22,7 +22,7 @@
 	</style>
 	</head>
 
-<h1>This is a test</h1>
+<h1>US Medals Won in Olympic Games Since 1896</h1>
 
 	
 	
@@ -67,7 +67,7 @@
 	var yAxis = d3.svg.axis()
 	    .scale(y)
 	    .orient("left")
-	    .tickFormat(d3.format(".2s"));
+	    .tickFormat(d3.format(".2d"));
 
 	var svg = d3.select("body").append("svg")
 	    .attr("width", width + margin.left + margin.right)
@@ -101,13 +101,13 @@
 	      .style("text-anchor", "end")
 	      .text("Number of Medals");
 
-	  var state = svg.selectAll(".state")
+	  var games = svg.selectAll(".games")
 	      .data(data)
 	    .enter().append("g")
 	      .attr("class", "g")
 	      .attr("transform", function(d) { return "translate(" + x0(d.Games) + ",0)"; });
 
-	  state.selectAll("rect")
+	  games.selectAll("rect")
 	      .data(function(d) { return d.medalsWon; })
 	    .enter().append("rect")
 	      .attr("width", x1.rangeBand())
@@ -117,10 +117,11 @@
 	      .style("fill", function(d) { return color(d.name); });
 
 	  var legend = svg.selectAll(".legend")
-	      .data(medals.slice().reverse())
+	      .data(medals.slice(1,5).reverse())
 	    .enter().append("g")
 	      .attr("class", "legend")
 	      .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
+	     
 
 	  legend.append("rect")
 	      .attr("x", width - 18)
@@ -134,6 +135,9 @@
 	      .attr("dy", ".35em")
 	      .style("text-anchor", "end")
 	      .text(function(d) { return d; });
+
+	  var comments = svg.selectAll("text")
+	  		.attr
 
 	});
 
