--- a/d3Hw6.html
+++ b/d3Hw6.html
@@ -27,24 +27,11 @@
 	
 	
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	<script src="d3.v3/d3.v3.js"></script>
+	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script>
+
+	
+	
 	var margin = {top: 20, right: 20, bottom: 30, left: 40},
 	    width = 960 - margin.left - margin.right,
 	    height = 500 - margin.top - margin.bottom;
