jk one more change tonight :)

--- a/d3Hw6.html
+++ b/d3Hw6.html
@@ -99,11 +99,11 @@
 	      .enter().append("rect")
 		  .attr("width", x1.rangeBand())
 	      .attr("x", function(d) { return x1(d.name); })
-	      .attr("y", function(d) { return 600; })
+	      .attr("y", function(d) { return height; })
 	      .attr("height", function(d) { return 0; })
 	      .style("fill", function(d) { return color(d.name); })
 		  .transition()
-		  .duration(3000)
+		  .duration(function(d) {return (height - y(d.value)) * 5;})
 	      .attr("width", x1.rangeBand())
 	      .attr("x", function(d) { return x1(d.name); })
 	      .attr("y", function(d) { return y(d.value); })
