--- a/d3Hw6.html
+++ b/d3Hw6.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
-	<head>
+<head>
 	<!-- WE CAN PUT THE CSS HERE -->
 	<style>
 		body {
@@ -20,17 +19,14 @@
 	  		display: none;
 		}
 	</style>
-	</head>
+</head>
+<body>
+	<h1>US Medals Won in Olympic Games Since 1896</h1>
+	<div class"details"></div>
 
-<h1>US Medals Won in Olympic Games Since 1896</h1>
-
-	
-	
 	
 	<script src="http://d3js.org/d3.v3.min.js"></script>
-	<script>
-
-	
+	<script>	
 	
 	var margin = {top: 20, right: 20, bottom: 30, left: 40},
 	    width = 1200 - margin.left - margin.right,
@@ -63,7 +59,7 @@
 	    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 	d3.csv("US_medals.csv", function(error, data) {
-	  var medals = d3.keys(data[0]).filter(function(key) { if(key!== "Games" && key !=="Total"&& key !=="Comments") return key; });
+	  var medals = d3.keys(data[0]).filter(function(key) { return key !== "Games" && key !== "Total" && key !== "Comments"; });
 
 	  data.forEach(function(d) {
 	    d.medalsWon = medals.map(function(name) { return {name: name, value: +d[name]}; });
@@ -88,11 +84,15 @@
 	      .style("text-anchor", "end")
 	      .text("Number of Medals");
 
+	 
+
 	  var games = svg.selectAll(".games")
 	      .data(data)
 	      .enter().append("g")
 	      .attr("class", "g")
 	      .attr("transform", function(d) { return "translate(" + x0(d.Games) + ",0)"; });
+
+	  
 
 	  games.selectAll("rect")
 	      .data(function(d) { return d.medalsWon; })
@@ -108,7 +108,9 @@
 	      .attr("x", function(d) { return x1(d.name); })
 	      .attr("y", function(d) { return y(d.value); })
 	      .attr("height", function(d) { return height - y(d.value); })
-	      .style("fill", function(d) { return color(d.name); });
+	      .style("fill", function(d) { return color(d.name); })
+	  		;
+	      
 
 	  var legend = svg.selectAll(".legend")
 	      .data(medals.slice(1,5).reverse())
@@ -130,8 +132,6 @@
 	      .style("text-anchor", "end")
 	      .text(function(d) { return d; });
 
-	  var comments = svg.selectAll("text")
-	  		.attr
 
 	});
 
