changed details on demand wording

--- a/d3Hw6.html
+++ b/d3Hw6.html
@@ -178,7 +178,7 @@
 			var d = this.__data__; 
 			var string;
 			if(d.Comments !==("NA")){
-				string = 'City: ' + d.Country +  ' ---   Total Medals: ' + d.Total  + ' ---   Comments: ' + d.Comments;
+				string = 'City: ' + d.Country +  ' ---   Total Medals: ' + d.Total  + ' ---   ' + d.Comments;
 			}
 			else{
 				string = 'City: ' + d.Country +  ' ---   Total Medals: ' + d.Total; 
