--- a/d3Hw6.html
+++ b/d3Hw6.html
@@ -26,7 +26,7 @@
 		  .tipsy-inner { border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; }
 
 		  /* Uncomment for shadow */
-		  /*.tipsy-inner { box-shadow: 0 0 5px #000000; -webkit-box-shadow: 0 0 5px #000000; -moz-box-shadow: 0 0 5px #000000; }*/
+		  .tipsy-inner { box-shadow: 0 0 5px #000000; -webkit-box-shadow: 0 0 5px #000000; -moz-box-shadow: 0 0 5px #000000; }
 
 		  .tipsy-arrow { position: absolute; width: 0; height: 0; line-height: 0; border: 5px dashed #000; }
 
@@ -39,7 +39,6 @@
 	<title>US Olympic Medals</title>
 <body>
 	<h1>US Medals Won in Olympic Games Since 1896</h1>
-	<div class"details"></div>
 
 	
 	<script src="http://d3js.org/d3.v3.min.js"></script>
@@ -116,8 +115,6 @@
 		  .attr("gx", function(d){return d.x;})
 		   .attr("gy", function(d){return d.y;})
 		  .attr("id", function(d){return "gamesGroup" + d.Games;});
-
-
 	  
 
 	  games.selectAll("rect")
@@ -127,9 +124,10 @@
 	      .attr("x", function(d) { return x1(d.name); })
 	      .attr("y", function(d) { return height; })
 	      .attr("height", function(d) { return 0; })
-		  .on("mouseover", function(d){d3.select(this).style("opacity", function(d){
+	      .attr("class", function(d) { return d.name;})
+		  .on("mouseover", function(d){d3.select(this).style("opacity", function(o){
 			var r
-			if(d.value <= 0){
+			if(o.value <= 0){
 				r = "1.0"
 			}
 			else{
@@ -137,7 +135,7 @@
 			}
 			
 			return r})})
-		  .on("mouseout", function(d){d3.select(this).style("opacity", function(d){return "1.0"})})
+		  .on("mouseout", function(d){d3.select(this).style("opacity", function(o){return "1.0"})})
 	      .style("fill", function(d) { return color(d.name); })
 	///////
 		  .transition()
@@ -145,33 +143,33 @@
 	      .attr("width", x1.rangeBand())
 	      .attr("x", function(d) { return x1(d.name); })
 	      .attr("y", function(d) { 
-		var ret
-		if(d.value <= 0){
-			ret = 1;
-		}
-		else{
-			ret = d.value;
-		}
-		
-		return y(ret); })
-	      .attr("height", function(d) { 
-		var h;
-		if(d.value <= 0){
-			h = height - y(1);
-		}
-		else{
-			h = height - y(d.value);
-		}
-		return h; })
-	      .style("fill", function(d) { 
-		var retVal
-		if(d.value == 0){
-			retVal = "#000";
-		}
-		else{
-			retVal = color(d.name);
-		}
-		return retVal; });
+			var ret
+			if(d.value <= 0){
+				ret = 1;
+			}
+			else{
+				ret = d.value;
+			}
+			
+			return y(ret); })
+		      .attr("height", function(d) { 
+			var h;
+			if(d.value <= 0){
+				h = height - y(1);
+			}
+			else{
+				h = height - y(d.value);
+			}
+			return h; })
+		      .style("fill", function(d) { 
+			var retVal
+			if(d.value == 0){
+				retVal = "#000";
+			}
+			else{
+				retVal = color(d.name);
+			}
+			return retVal; });
 	
 	$('g').tipsy({
 		gravity:'w', html:true, title:function(){
@@ -192,7 +190,8 @@
 	  var legend = svg.selectAll(".legend")
 	      .data(medals.slice(1,5).reverse())
 	    .enter().append("g")
-	      .attr("class", "legend")
+	      .attr("class", function(d) { return "legend " + d;})
+	      .attr("id", function(d) { return d;})
 	      .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
 	     
 
@@ -209,7 +208,9 @@
 	      .style("text-anchor", "end")
 	      .text(function(d) { return d; });
 
-
+	   legend.on("mouseover", function(d) { 
+	   			d3.selectAll("."+d).style("opacity", ".5"); })
+	   	  .on("mouseout", function(d) {d3.selectAll("."+d).style("opacity", "1"); });
 	});
 	
 
